<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">



    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/createA"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/blue_first"
        android:textStyle="bold" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/createB"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/blue_first"
        android:textStyle="bold" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/correo_electronico"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/blue_first"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_gravity="center"
        android:hint="Example@gmail.com"
        android:inputType="textEmailAddress" />


    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/contrasena"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/blue_first"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/contrasenaEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_gravity="center"
        android:hint="Secure Password"
        android:inputType="textPassword" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/confirmPass"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/blue_first"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/confirmPassEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_gravity="center"
        android:hint="Confirm Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button"
        android:text="@string/registrate" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/conCuenta"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:textColor="@color/blue_second" />

    <TextView
        android:id="@+id/registrateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:textSize="17sp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/blue_first" />










</LinearLayout>