<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Registrate">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/azul_fuerte"
        android:orientation="vertical">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="35dp"
            android:text="@string/createA"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size"
            android:fontFamily="@font/montserrat_bold"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/createB"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/subtitle_size"
            android:fontFamily="@font/montserrat_semibold" />


    </LinearLayout>




    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/wave_registrate"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="125dp"
            android:text="@string/correo_electronico"
            android:layout_gravity="center"
            android:textColor="@color/azul_marino"
            android:textSize="@dimen/body_text"
            android:fontFamily="@font/montserrat_semibold" />

    </LinearLayout>


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@drawable/back_formulario"
        android:layout_marginRight="110dp"
        android:layout_marginLeft="110dp"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/contrasena"
        android:layout_gravity="center"
        android:textColor="@color/azul_marino"
        android:textSize="@dimen/body_text"
        android:fontFamily="@font/montserrat_semibold" />

    <EditText
        android:id="@+id/contrasenaEditText"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"

        android:layout_gravity="center"
        android:background="@drawable/back_formulario"
        android:layout_marginRight="110dp"
        android:layout_marginLeft="110dp"
        android:inputType="textPassword" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/confirmPass"
        android:layout_gravity="center"
        android:textColor="@color/azul_marino"
        android:textSize="@dimen/body_text"
        android:fontFamily="@font/montserrat_semibold"  />

    <EditText
        android:id="@+id/confirmPassEditText"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"

        android:layout_gravity="center"
        android:background="@drawable/back_formulario"
        android:layout_marginRight="110dp"
        android:layout_marginLeft="110dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/montserrat_semibold"
        android:textAllCaps="false"
        android:textSize="@dimen/body_text"
        android:textColor="@color/white"
        android:text="@string/registrate" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/conCuenta"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/body_text"
        android:textColor="@color/azul_marino"
        android:fontFamily="@font/montserrat_regular"/>

    <TextView
        android:id="@+id/registrateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="@dimen/body_text"
        android:textColor="@color/azul_fuerte"
        android:fontFamily="@font/montserrat_medium" />










</LinearLayout>