<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".IniciarSesion">

    <ImageView
        android:layout_height="350dp"
        android:layout_width="350dp"
        android:layout_marginTop="75dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_app03" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/correo_electronico"
        android:textSize="@dimen/body_text"
        android:layout_gravity="center"
        android:textColor="@color/azul_marino"
        android:fontFamily="@font/montserrat_semibold" />

    <EditText
        android:id="@+id/emailEditText"
        android:padding="6dp"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@drawable/back_formulario"
        android:layout_marginRight="110dp"
        android:layout_marginLeft="110dp"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/contrasena"
        android:textSize="@dimen/body_text"
        android:layout_gravity="center"
        android:textColor="@color/azul_marino"
        android:fontFamily="@font/montserrat_semibold" />

    <EditText
        android:id="@+id/contrasenaEditText"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@drawable/back_formulario"
        android:layout_marginRight="110dp"
        android:layout_marginLeft="110dp"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        android:background="@drawable/round_button"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="@dimen/body_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:text="@string/login" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sinCuenta"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/body_text"
        android:textColor="@color/azul_marino"
        android:fontFamily="@font/montserrat_regular"/>

    <TextView
        android:id="@+id/registrateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/registrate"
        android:textStyle="bold"
        android:textSize="@dimen/body_text"
        android:textColor="@color/azul_fuerte"
        android:fontFamily="@font/montserrat_medium" />

</LinearLayout>