<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icono_img"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_location" />

            <TextView
                android:id="@+id/lugar_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guadalajara_jalisco"
                android:textSize="@dimen/body_text"
                android:layout_gravity="center"
                android:textColor="@color/azul_marino"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_marginRight="150dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imagen_iv"
            android:layout_width="370dp"
            android:layout_height="170dp"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_image"
            android:clipToOutline="true"
            android:src="@drawable/guadalajara" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="200dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/amigos_tv"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/friends"
                android:textColor="@color/azul_marino"
                android:layout_gravity="center"
                android:textSize="@dimen/body_text"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/montserrat_regular" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ListView
                        android:id="@+id/amigo_lv"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp" />

                </LinearLayout>

            </HorizontalScrollView>





        </LinearLayout>

        <TextView
            android:id="@+id/fechas_tv"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/fechas"
            android:textColor="@color/azul_marino"
            android:textSize="@dimen/subtitle_size"
            android:fontFamily="@font/montserrat_semibold"
            android:layout_marginLeft="33dp" />

        <TextView
            android:id="@+id/rango_fechas_tv"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/rango_fecha1"
            android:textColor="@color/azul_marino"
            android:textSize="@dimen/body_text"
            android:layout_marginLeft="33dp"
            android:fontFamily="@font/montserrat_regular"
            />

    </LinearLayout>


</LinearLayout>