<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AgregarAmigo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <include layout="@layout/activity_app_bar"/>


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:layout_marginLeft="11dp"
                android:text="@string/agrega_amigos"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/azul_marino"
                android:textSize="@dimen/title_size" />

            <ImageView
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:src="@drawable/i4"
                android:layout_gravity="center" />

        </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="-30dp"
        android:background="@drawable/wave_home">
    </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@color/azul_blanco">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="85dp"
                android:layout_marginRight="85dp"
                android:textAlignment="center"
                android:text="@string/amigos_texto"
                android:textSize="@dimen/body_text"
                android:layout_gravity="center"
                android:textColor="@color/azul_marino"
                android:fontFamily="@font/montserrat_semibold" />

            <EditText
                android:id="@+id/codigoEditText"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:textAlignment="center"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:background="@drawable/round_button_white"
                android:layout_marginRight="150dp"
                android:layout_marginLeft="150dp" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/tu_codigo"
                android:textSize="@dimen/body_text"
                android:layout_gravity="center"
                android:textColor="@color/azul_marino"
                android:fontFamily="@font/montserrat_semibold" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/codigo"
                android:textSize="@dimen/body_text"
                android:layout_gravity="center"
                android:textColor="@color/azul_marino"
                android:fontFamily="@font/montserrat_regular" />


        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">
        <include layout="@layout/activity_nav_bar"/>
    </RelativeLayout>

</RelativeLayout>