<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_location_2" />

            <TextView
                android:id="@+id/tu_viaje_lugar_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guadalajara_jalisco"
                android:textSize="@dimen/body_text"
                android:layout_gravity="center"
                android:textColor="@color/azul_marino"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_marginRight="150dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/tu_viaje_imagen_iv"
            android:layout_width="370dp"
            android:layout_height="170dp"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:clipToOutline="true"
            android:src="@drawable/guadalajara" />


        <TextView
            android:id="@+id/fechas_tu_viaje"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:text="@string/fechas"
            android:textColor="@color/azul_marino"
            android:textSize="@dimen/subtitle_size"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/montserrat_semibold"
            android:layout_marginLeft="11dp" />

        <TextView
            android:id="@+id/tu_viaje_rango_fechas_tv"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/rango_fecha1"
            android:textColor="@color/azul_marino"
            android:textSize="@dimen/body_text"
            android:layout_marginLeft="11dp"
            android:fontFamily="@font/montserrat_regular"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="45dp"
            android:orientation="vertical">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/friends"
                android:textColor="@color/azul_marino"
                android:textSize="@dimen/subtitle_size"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/montserrat_semibold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/amigo1_tu_viaje"
                        android:layout_width="59dp"
                        android:layout_height="59dp"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/round_circle"/>
                    <ImageView
                        android:id="@+id/amigo2_tu_viaje"
                        android:layout_width="59dp"
                        android:layout_height="59dp"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/round_circle"/>
                    <ImageView
                        android:id="@+id/amigo3_tu_viaje"
                        android:layout_width="59dp"
                        android:layout_height="59dp"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/round_circle"/>

                    <ImageButton
                        android:layout_width="59dp"
                        android:layout_height="59dp"
                        android:elevation="6dp"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/round_button_white"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/ic_add"/>



                </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>